# AsianStocks

./: CMakeLists.txt  Makefile  main.c
includes/: announcement_entry.h  api.h  bursa.h  endpoints.h  memory.h  routes.h
src/: api.c  bursa.c
